--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -5,12 +5,42 @@
     one more css for each page that will contain the selected used 
     on that page only (the ones not reused in other pages).
 */
-/*
-    ---------------------------------------up--------------------------
-*/
+
+
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px; /* Altura del navbar */
+    background-color: rgba(0, 0, 0, 0.7); /* Fondo semi-transparente para el navbar */
+    color: white; /* Color del texto */
+    z-index: 1000; /* Asegura que el navbar esté por encima de la imagen */
+    /* Resto de los estilos del navbar */
+}
+
+
+
+
+/*  ---------------------------------------up--------------------------*/
 .card-home-title {
     margin: 2rem;
-    font-family: Work Sans;
+    font-family: 'Work Sans', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 120%;
+    text-transform: capitalize;
+    background: var(--gradient-2, linear-gradient(129deg, #22B5BE 0%,  #41206C 100%));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+h3 {
+    font-size: 6rem;
+    margin-top: 7rem;
+    margin-bottom: 3rem;
+    font-family: 'Work Sans', sans-serif;
     font-style: normal;
     font-weight: 600;
     line-height: 120%;
@@ -21,36 +51,39 @@
     -webkit-text-fill-color: transparent;
 }
 
+h6 {
+    color: white;
+    font-family: Work Sans;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%; /* 1.4rem */
+}
+
+
 /*------------------------------------------CARDCODE---------------------------------------- */
 
 .card-code {
-    width: 90rem;
+    width: 94rem;
     height: 40rem;
     margin: auto;
-    background: linear-gradient(to right, transparent, rgba(199, 114, 241, 0.721)), url(https://e1.pxfuel.com/desktop-wallpaper/911/61/desktop-wallpaper-the-best-gamer-headsets-to-buy-gaming-headphones.jpg);
+    background: linear-gradient(to bottom, transparent, rgba(199, 114, 241, 0.721)), url(https://e1.pxfuel.com/desktop-wallpaper/911/61/desktop-wallpaper-the-best-gamer-headsets-to-buy-gaming-headphones.jpg);
     background-size: cover;
     background-position: center;
     margin-bottom: 3rem;
     margin-top: 3rem;
-    max-width: 90rem;
+    max-width: 100%;
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
     align-items: center;
-}
 
-.form-control {
-    width: 24rem;
-    height: 3rem;
 }
-
 .btn-code {
     color: white;
-    height: 4rem;
-    padding: 0px 30px;
-    justify-content: center;
     align-items: center;
+    height: 4rem;
     border-radius: 20px;
     background: var(--gradient-1, linear-gradient(149deg, #D04E8D 0%, #6D2CBF 100%));
 
@@ -64,12 +97,22 @@
     }
 }
 
+.form-control {
+    width: 30rem;
+    height: 3rem;
+    max-width: 100%;
+}
+
+
 
 /*------------------------------------------CARDPRODUCTS----------------------------------------*/
 .carousel {
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     width: 100%;
-    margin-bottom: 3rem;
     color: white;
+    background: linear-gradient(to bottom, transparent, rgba(199, 114, 241, 0.721))
+    
 }
 
 /*------------------------------------------CARDOFFERS----------------------------------------*/
@@ -77,24 +120,64 @@
     width: 20rem;
     color: aliceblue;
     overflow: inherit;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 
 }
 
-h3 {
-    text-align: center;
+
+/*------------------------------------------CardInformation----------------------------------------*/
+.container {
+    align-items: flex;
+    background-size: cover;
+    max-width: 500rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    overflow: auto;
+    box-shadow: 6px 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 3rem;
+  
+}
+
+.card-body {
+    border-radius: 1.25rem;
     color: white;
-    margin: 2rem;
-    font-family: Work Sans;
-    background: var(--gradient-2, linear-gradient(129deg, #22B5BE 0%, #6743CC 100%));
-    border-radius: 2rem;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    align-items: center;
+    margin: auto;
 }
+
+.card-img-top {
+    width: 10rem;
+    height: 10rem;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: auto;
+    box-shadow: 6px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.card-information {
+    margin: 1rem;
+    display: flex;
+    width: 15rem;
+    height: 20rem;
+    padding: 0.625rem 1.8rem 1.8rem 1.8rem;
+    flex-direction: column;
+    align-items: center;
+    align-self: stretch;
+    border-radius: 2rem;
+    box-shadow: 6px 4px 8px rgba(0, 0, 0, 0.2);
+    background: #41206C
+}
+
 /*------------------------------------------RESPONSIVE----------------------------------------*/
 /* Media query for small devices */
 @media (max-width: 768px) {
     .card-code {
         width: 100%;
         height: auto;
+        margin-top: 1.5rem;
+        margin-bottom: 1.5rem;
+        border-radius: 0;
     }
 
     .form-control {
