--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -12,15 +12,9 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 60px; /* Altura del navbar */
-    background-color: rgba(0, 0, 0, 0.7); /* Fondo semi-transparente para el navbar */
-    color: white; /* Color del texto */
-    z-index: 1000; /* Asegura que el navbar esté por encima de la imagen */
-    /* Resto de los estilos del navbar */
+    height: 60px; 
+    z-index: 1000; 
 }
-
-
-
 
 /*  ---------------------------------------up--------------------------*/
 .card-home-title {
@@ -49,6 +43,9 @@ h3 {
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    display: inline-block;
+    animation: moveLeftRight 5s ease forwards;
+    
 }
 
 h6 {
@@ -58,9 +55,18 @@ h6 {
     font-style: normal;
     font-weight: 400;
     line-height: 140%; /* 1.4rem */
+    position: relative;
+    animation: bounceEffect 1.5s ease infinite alternate;
 }
 
-
+@keyframes bounceEffect {
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(-10px);
+    }
+}
 /*------------------------------------------CARDCODE---------------------------------------- */
 
 .card-code {
