--- a/src/front/styles/forgotP.css
+++ b/src/front/styles/forgotP.css
@@ -1,15 +1,15 @@
-.container{
-    margin:start auto;
-    width: 30rem;
+.container-forgot{
+  margin: auto;
     background:  #41206C;
     border-radius: 1rem;
-    padding: 40px 5px;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
+  width: fit-content;
+  padding: 2rem;
 }
+
 
 .lh1{
     color: white;
@@ -32,24 +32,49 @@
     text-decoration: none;
 }
 
-.btnforgot {
-    color: white;
-    height:49px;
-    width: 175px;
-    padding: 0px 30px;
-    justify-content: center;
-    align-items: center;
-    gap: 12px;
+.form-select{
+  width: Hug (130px);
+    height: 40px;
+    padding: 0px 30px 0px 30px;
     border-radius: 20px;
-    background: var(--gradient-1, linear-gradient(149deg, #D04E8D 0%, #6D2CBF 100%));
-    &:hover{
-      box-shadow: 0 12px 16px 0 rgba(231, 59, 174, 0.377), 0 17px 50px 0 rgba(231, 59, 174, 0.377);
-    }
-    &:active{
-      -webkit-transform: translateY(0.25em);
-      transform: translateY(0.25em);
-    }
-  }
+    gap: 15px;
+}
+
+.input-group{
+  border-radius: 20px;
+}
+
+option{
+ color: white;
+ background: #41206C;
+
+}
+
+
+
+.btnforgot{
+   
+  height: 2.8rem;
+  padding: 0px 30px;
+   color: white;
+   border-radius: 20px;
+   background: var(--gradient-1, linear-gradient(149deg, #D04E8D 0%, #6D2CBF 100%));
+   &:hover{
+     box-shadow: 0 12px 16px 0 rgba(231, 59, 174, 0.377), 0 17px 50px 0 rgba(231, 59, 174, 0.377);
+   }
+   &:active{
+     -webkit-transform: translateY(0.25em);
+     transform: translateY(0.25em);
+   }
+ }
+
+ 
+
+
+
+
+
+
 
 
 
