--- a/src/front/styles/ourServices.css
+++ b/src/front/styles/ourServices.css
@@ -1,23 +1,21 @@
-*{
+* {
     margin: 0;
     padding: 0;
+
 }
-.body{
+
+.body1 {
     margin: 0;
     min-height: 100vh;
-    background-image:url("https://e1.pxfuel.com/desktop-wallpaper/851/388/desktop-wallpaper-hardware-electric-computer-repair-for.jpg ") ;
+    background-image: url("https://e1.pxfuel.com/desktop-wallpaper/851/388/desktop-wallpaper-hardware-electric-computer-repair-for.jpg ");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
 }
-.about-1{
-    margin: 30px;
-    padding: 5px;
 
-}
-.about-1 h1{
-    
+
+.tituloH1 {
     font-size: 3rem;
     margin-top: 2rem;
     margin-bottom: 3rem;
@@ -30,25 +28,22 @@
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    
+
     display: inline-block;
     text-align: center;
     animation: moveLeftRight 5s ease forwards;
-    
 }
-.about-1 {
-    text-align: center;
-    padding: 10px;
-    color: white;
+
+.tituloH1 {
     background: linear-gradient(135deg, rba(255, 255, 255, 0.1)), rgba(255, 255, 255, 0);
-    backdrop-filter:  blur(10px);
+    backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     border-radius: 20px;
     border: 1px solid rga(255, 255, 255, 0.18);
     box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
-    
 }
-.about-item{
+
+.item-service {
     margin-bottom: 20px;
     margin-top: 20px;
     background-color: #41206C;
@@ -56,29 +51,39 @@
     box-shadow: 0 0 9px rgba(0, 0, 0, .6);
     border-radius: 9px;
 }
-.fa{
-    font-size: 35px;
+
+.icon-service {
+    font-size: 25px;
     margin: 10px;
+    color: black;
 }
-.itemH3{
+
+.tituloH2 {
     color: whitesmoke;
-    font-size: 23px;
+    font-size: 33px;
     margin-bottom: 10px;
-   
 }
-.about-item hr{
+.item-service hr{
     width: 46px;
     height: 3px;
     background-color: #108288;
     margin: 0 auto;
     border: none;
-
 }
-.about-item p{
+.item-service p{
     margin-top: 20px;
-    color: aliceblue;
-
+    color: aliceblue; 
 }
-.about-item:hover{
+
+
+
+.item-service:hover{
     background-color:  #6743CC;
+}
+
+
+.item-service {
+    box-shadow: 5px 7px 9px -3px #41206C;
+    cursor: pointer;
+    color: white;
 }
