[Added Users Front End and fixed some errors regarding form-control className]

--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -103,7 +103,7 @@ h6 {
     }
 }
 
-.form-control {
+.formControlSearchCode {
     width: 30rem;
     height: 3rem;
     max-width: 100%;
@@ -182,7 +182,7 @@ h6 {
         border-radius: 0;
     }
 
-    .form-control {
+    .formControlSearchCode {
         width: 100%;
     }
 
