--- a/src/front/styles/forgotPass.css
+++ b/src/front/styles/forgotPass.css
@@ -20,7 +20,7 @@
   height: 10.5rem;
 }
 
-.form-control{
+.formControlForgotPassword {
     width: Hug (130px);
     height: 40px;
     padding: 0px 30px 0px 30px;
