--- a/src/front/styles/users.css
+++ b/src/front/styles/users.css
@@ -1,4 +1,4 @@
-/* clients.css */
+/* users.css */
 
 html,
 body,
@@ -18,11 +18,19 @@ table td {
     outline: none;
 }
 
-.cardBodyClients {
+.cell-question {
+    white-space: pre-line;
+}
+
+.cardBodyUsers {
     padding: 0.5rem;
 }
 
-.tableItems {
+.users-cell-size {
+    width: 16%;
+}
+
+.tableUsersItems {
     border: none;
     outline: none;
     margin-bottom: 1rem;
@@ -31,7 +39,7 @@ table td {
     font-family: "Work Sans";
 }
 
-.tableHeader {
+.tableUsersHeader {
     margin-bottom: 1rem;
     border-image: linear-gradient(to right, #D04E8D, #6D2CBF);
     border-image-slice: 1;
@@ -46,23 +54,19 @@ thead {
     position: sticky;
 }
 
-.cell-size {
-    width: 20%;
-}
-
-.clientsButtons {
+.usersButtons {
     color: rgb(255, 255, 255);
     font-family: "Work Sans";
     border: none;
     outline: none;
 }
 
-.clientsCard {
+.usersCard {
     background-color: transparent;
     font-weight: bold;
 }
 
-.formControlSearchButton {
+.formControlUsersButtons {
     margin-right: 2rem;
     border: 2px solid;
     background-color: white;
@@ -72,20 +76,13 @@ thead {
     border-radius: 0;
 }
 
-.modal-dialog {
-    padding: 1rem;
-    font-family: "Work Sans";
-    font-weight: bold;
-    color: white;
-}
-
-.clientsModalContent {
+.usersModalContent {
     background: #1C1C1C !important;
     border-image: linear-gradient(to right, #D04E8D, #6D2CBF);
     border-image-slice: 1;
 }
 
-.formModalClients {
+.formModalUsers {
     border-image: linear-gradient(to right, #D04E8D, #6D2CBF);
     border-image-slice: 1;
     border-radius: 0;
