[Add addEndpointsUser] --Fix Api check empty in body request --Add Endpoint for add, update and delete users --Add search input by id, firstname, lastname, role

--- a/src/front/styles/users.css
+++ b/src/front/styles/users.css
@@ -92,3 +92,11 @@ thead {
     margin-bottom: 0.5rem;
     margin-top: 0.5rem;
 }
+.option-user-modal{
+    background: #1C1C1C;
+    color: white;
+}
+
+.select-user-modal{
+    border-radius: 0;
+}
