--- a/src/front/styles/forgotPass.css
+++ b/src/front/styles/forgotPass.css
@@ -10,7 +10,6 @@
   padding: 2rem;
 }
 
-
 .lh1{
     color: white;
 }
@@ -32,7 +31,7 @@
     text-decoration: none;
 }
 
-.form-select{
+.select-forgot-pass{
   width: Hug (130px);
     height: 40px;
     padding: 0px 30px 0px 30px;
@@ -40,17 +39,14 @@
     gap: 15px;
 }
 
-.input-group{
+.group-forgot-pass{
   border-radius: 20px;
 }
 
-option{
+.option-forgot-pass{
  color: white;
  background: #41206C;
-
 }
-
-
 
 .btnforgot{
    
