--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -314,11 +314,11 @@
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                     <tr>
                       <td>
-                        <p>Hi there, this is a message from contact-form</p>
-                        <p>Email: {{email}}</p>
-                        <p>Phone: {{phone}}</p>
-                        <p>Question: {{question}}</p>
-                        <p>Message: {{message}}</p>
+                        <p>Hi there, this is a message from contact us</p>
+                        <p><b>Email:</b> {{email}}</p>
+                        <p><b>Phone:</b> {{phone}}</p>
+                        <p><b>Question:</b> {{question}}</p>
+                        <p><b>Message:</b> {{message}}</p>
                         <!-- <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
                           <tbody>
                             <tr>
@@ -349,7 +349,7 @@
               <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                 <tr>
                   <td class="content-block">
-                    <span class="apple-link">EyA Solutions, Byte by Byte</span>
+                    <span class="apple-link">EyA Solutions, Byte by Byte </span><img src="/workspaces/FinalProject-AmandaBogantes-EuniceHidalgo-YahairaCalvo-StefanyMendez/src/front/img/logo.png"/>
                     <!-- <br> Don't like these emails? <a href="http://i.imgur.com/CScmqnj.gif">Unsubscribe</a>. -->
                   </td>
                 </tr>
