--- a/src/front/styles/clients.css
+++ b/src/front/styles/clients.css
@@ -28,7 +28,7 @@ table td {
     margin-bottom: 1rem;
     font-weight: bold;
     background: var(--gradient-2, linear-gradient(129deg, #2cd7e0 0%, #6743CC 100%));
-    font-family: "Work Sans";
+    
 }
 
 .tableHeader {
@@ -36,7 +36,6 @@ table td {
     border-image: linear-gradient(to right, #D04E8D, #6D2CBF);
     border-image-slice: 1;
     font-weight: bold;
-    font-family: "Work Sans";
     background-color: transparent;
     color: white;
 }
@@ -52,7 +51,6 @@ thead {
 
 .clientsButtons {
     color: rgb(255, 255, 255);
-    font-family: "Work Sans";
     border: none;
     outline: none;
 }
@@ -74,7 +72,6 @@ thead {
 
 .modal-dialog {
     padding: 1rem;
-    font-family: "Work Sans";
     font-weight: bold;
     color: white;
 }
@@ -94,4 +91,14 @@ thead {
 .modal-label-input {
     margin-bottom: 0.5rem;
     margin-top: 0.5rem;
+}
+.titleClientsTable {
+    font-size: 2.5rem;
+    font-weight: bolder;
+    background: var(--gradient-2, linear-gradient(129deg, #22B5BE 0%, #6743CC 100%));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: moveLeftRight 5s ease forwards;
+
 }
