--- a/src/front/styles/jobsTechnical.css
+++ b/src/front/styles/jobsTechnical.css
@@ -1,7 +1,7 @@
 /* jobsTechnical.css */
 
 .titleJobsTable {
-    font-family: 'Work Sans';
+   
     font-size: 2.5rem;
     font-weight: bolder;
     background: var(--gradient-2, linear-gradient(129deg, #22B5BE 0%, #6743CC 100%));
@@ -40,7 +40,7 @@ table td {
     margin-bottom: 1rem;
     font-weight: bold;
     background: var(--gradient-2, linear-gradient(129deg, #2cd7e0 0%, #6743CC 100%));
-    font-family: "Work Sans";
+   
 }
 
 .tableJobsHeader {
@@ -48,7 +48,6 @@ table td {
     border-image: linear-gradient(to right, #D04E8D, #6D2CBF);
     border-image-slice: 1;
     font-weight: bold;
-    font-family: "Work Sans";
     background-color: transparent;
     color: white;
 }
@@ -64,7 +63,6 @@ thead {
 
 .jobsTechnicalButtons {
     color: rgb(255, 255, 255);
-    font-family: "Work Sans";
     border: none;
     outline: none;
 }
@@ -86,7 +84,7 @@ thead {
 
 .modal-dialog {
     padding: 1rem;
-    font-family: "Work Sans";
+  
     font-weight: bold;
     color: white;
 }
@@ -107,3 +105,18 @@ thead {
     margin-bottom: 0.5rem;
     margin-top: 0.5rem;
 }
+
+.option-job-modal {
+    background: #1C1C1C;
+    color: white;
+}
+
+.select_job-modal {
+    border-radius: 0;
+}
+
+.readonly {
+    background-color: #1C1C1C !important;
+    color: white;
+}
+
