--- a/src/front/styles/login.css
+++ b/src/front/styles/login.css
@@ -1,45 +1,38 @@
-.container-login{
+.container-login {
+  background: url(https://media.istockphoto.com/id/1399980043/photo/technology-innovation-modern-futuristic-background.webp?b=1&s=170667a&w=0&k=20&c=d_SCKLxnRYJIq_k7IfnAr3o63bySvnfBYu3e84yFMyg=);
   margin: auto;
-    background:  #41206C;
-    border-radius: 1rem;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 1rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   width: fit-content;
-  padding: 2rem;
-}
-
-.lh1{
-    color: white;
+  padding: 3rem;
 }
 
 .form-label {
   text-decoration: none;
 }
 
-.formControlLogin{
-    border-radius: 20px;
+.formControlLogin {
+  border-radius: 20px;
 }
 
-.btnLogin{
-   height: 2.8rem;
-   padding: 0px 30px;
-    color: white;
-    border-radius: 20px;
-    background: var(--gradient-1, linear-gradient(149deg, #D04E8D 0%, #6D2CBF 100%));
-    &:hover{
-      box-shadow: 0 12px 16px 0 rgba(231, 59, 174, 0.377), 0 17px 50px 0 rgba(231, 59, 174, 0.377);
-    }
-    &:active{
-      -webkit-transform: translateY(0.25em);
-      transform: translateY(0.25em);
-    }
+.btnLogin {
+  height: 2.8rem;
+  padding: 0px 30px;
+  color: white;
+  border-radius: 20px;
+  background: var(--gradient-1, linear-gradient(149deg, #D04E8D 0%, #6D2CBF 100%));
+
+  &:hover {
+    box-shadow: 0 12px 16px 0 rgba(231, 59, 174, 0.377), 0 17px 50px 0 rgba(231, 59, 174, 0.377);
   }
 
-  
-
-
-
-
-
+  &:active {
+    -webkit-transform: translateY(0.25em);
+    transform: translateY(0.25em);
+  }
+}
