--- a/src/front/styles/changePass.css
+++ b/src/front/styles/changePass.css
@@ -11,7 +11,15 @@
   width: fit-content;
   padding: 3rem;
 }
-
+.form-change-pass{
+  background-color: rgba(50, 50, 50, 0.2);
+  padding: 2rem;
+  border-radius: 3rem;
+  box-shadow: 0 0 3rem rgba(0, 0, 0, 0.2);
+  max-width: 100%;
+  margin: 0 auto;
+  color: white;
+}
 
 .lh1 {
   color: white;
