[fixNode] --fix css

--- a/src/front/styles/contactUs.css
+++ b/src/front/styles/contactUs.css
@@ -16,7 +16,7 @@
 }
 
 /*------------------------------------------Container----------------------------------------*/
-.container {
+.container-contactUs {
   margin-top: 2rem;
 }
 
@@ -29,7 +29,7 @@
 }
 
 /*------------------------------------------Form----------------------------------------*/
-form {
+.form-contactUs {
   background-color: rgba(50, 50, 50, 0.2);
   padding: 2rem;
   border-radius: 3rem;
@@ -44,11 +44,11 @@ form {
   margin: auto;
 }
 
-.form-label {
+.form-labelContactUs {
   font-weight: bold;
 }
 
-.form-control {
+.form-controlContactUs {
   border-radius: 1rem;
 }
 
@@ -70,7 +70,7 @@ form {
   }
 }
 
-.btn-primary:hover {
+.btn-contact:hover {
   background-color: #6a006a;
 }
 
@@ -87,7 +87,7 @@ form {
   justify-content: center;
 }
 
-i {
+.i-contactUs {
   color: #D04E8D;
   margin: 0.5rem;
 }
