--- a/src/front/styles/users.css
+++ b/src/front/styles/users.css
@@ -46,6 +46,16 @@ table td {
     color: white;
 }
 
+.formControlUsersButtons{
+    margin-right: 2rem;
+    border: 2px solid;
+    background-color: white;
+    border-image: linear-gradient(to right, #D04E8D, #6D2CBF);
+    border-image-slice: 1;
+    font-weight: bold;
+    border-radius: 0;
+}
+
 thead {
     top: 0;
     position: sticky;
